# flackbot-qt

./: CMakeLists.txt  README.md
src/: bridge.js  config.h  cookiejar.cpp  cookiejar.h  index.html  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
